--- a/src/components/SearchBar/search.module.css
+++ b/src/components/SearchBar/search.module.css
@@ -1,13 +1,13 @@
 .search_bar {
   max-width: 1200px;
-  width: 80vw;
-  outline: none;
+  width: 70vw;
+  outline:none;
   border: 2px solid #625f5f;
   border-radius: 10px;
   padding: 10px 10px;
 }
 .search_bar:focus {
-  box-shadow: 1px 2px 10px rgba(100, 99, 99, 0.8);
+  box-shadow: 1px 2px 10px rgba(100, 99, 99, 0.8)
 }
 /* flex items-center justify-center mt-10 sticky top-[80px] z-1000  */
 .search {
