--- a/src/components/forms/EditRooms/edit-room.css
+++ b/src/components/forms/EditRooms/edit-room.css
@@ -1,5 +1,6 @@
 .input[type="text"],
 .input[type="email"],
+.input[type="number"],
 .input[type="password"] {
   border: 1px solid #ccc;
   border-radius: 0.25rem;
